# Factor-Analysis

./: Makefile  pyproject.toml  requirements.in  requirements.txt
Notebook/: factor_analysis.ipynb
